integration_tests/tests/integration_tests/snapshots/integration_tests__fungibles_and_token_extensions_tests__token_keg_fungible_with_no_metadata.snap
---
source: integration_tests/tests/integration_tests/fungibles_and_token_extensions_tests.rs
expression: response
---
{
  "interface": "FungibleToken",
  "id": "wKocBVvHQoVaiwWoCs9JYSVye4YZRrv5Cucf7fDqnz1",
  "authorities": [],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "token"
  },
  "mutable": false,
  "burnt": false,
  "token_info": {
    "supply": 1000000000000,
    "decimals": 10,
    "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
    "mint_authority": "CeviT1DTQLuicEB7yLeFkkAGmam5GnJssbGb7CML4Tgx"
  }
}
